@@ -33,7 +33,7 @@
 /*
  * Portions Copyright (c) 2005 Gunnar Ritter, Freiburg i. Br., Germany
  *
- * Sccsid @(#)n3.c	1.49 (gritter) 9/30/05
+ * Sccsid @(#)n3.c	1.50 (gritter) 9/30/05
  */
 
 /*
@@ -117,6 +117,7 @@ growcontab(void)
 		addcon(i++, "kernbefore", (void(*)(int))casekernbefore);
 		addcon(i++, "kernafter", (void(*)(int))casekernafter);
 		addcon(i++, "ftr", (void(*)(int))caseftr);
+		addcon(i++, "feature", (void(*)(int))casefeature);
 	} else {
 		for (i = 0; i < sizeof mhash / sizeof *mhash; i++)
 			if (mhash[i])
