@@ -23,7 +23,7 @@
 /*
  * Copyright (c) 2005 Gunnar Ritter, Freiburg i. Br., Germany
  *
- * Sccsid @(#)afm.h	1.13 (gritter) 9/29/05
+ * Sccsid @(#)afm.h	1.14 (gritter) 9/30/05
  */
 
 struct kernpair {
@@ -35,6 +35,18 @@ struct kernpair {
 struct namecache {
 	short	afpos;
 	short	fival[2];
+	unsigned short	gid;
+};
+
+struct charpair {
+	unsigned short	ch1;
+	unsigned short	ch2;
+};
+
+struct feature {
+	char	*name;
+	struct charpair	*pairs;
+	int	npairs;
 };
 
 extern struct afmtab {
@@ -51,9 +63,11 @@ extern struct afmtab {
 	struct namecache	*namecache;
 	int	nameprime;
 	struct kernpair	*kernpairs;
+	struct charpair	*gid2tr;
 	int	nkernpairs;
 	int	kernprime;
 	int	nspace;
+	struct feature	**features;
 	int	rq;
 	int	lineno;
 	int	nchars;
@@ -84,6 +98,6 @@ extern	void	afmalloc(struct afmtab *, int);
 extern	void	afmremap(struct afmtab *);
 extern	int	afmmapname(const char *, int, int);
 extern	void	afmaddchar(struct afmtab *, int, int, int, int, int[],
-			char *, int, int);
+			char *, int, int, int);
 extern	struct kernpair	*afmkernlook(struct afmtab *, int, int);
 extern	int	nextprime(int n);
